--- a/src/components/Pages/CartPage/Cart.module.css
+++ b/src/components/Pages/CartPage/Cart.module.css
@@ -3,56 +3,88 @@
     height: 80px;
 } */
 .cartCard {
-       padding: 15px;
-    border-bottom: 1px solid #dee2e6;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, .2);
-    margin: 0 0 24px;
-    border-radius: 10px;
-    background-color: var(--white);
+  padding: 15px;
+  border-bottom: 1px solid #dee2e6;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 0 24px;
+  border-radius: 10px;
+  background-color: var(--white);
 }
 .cartCount {
-    display: inline-flex;
-    gap: 10px;
+  display: inline-flex;
+  gap: 10px;
 }
-.cartCount span:not(:nth-child(2)){
-        cursor: pointer;
-    font-size: 23px;
-    width: 25px;
-    height: 25px;
-    line-height: 21px;
-    border-radius: 50%;
-    color: #000;
-    box-shadow: 0 3px 14px #d6d6d6;
-        display: inline-flex;
-            justify-content: center;
+.cartCount span:not(:nth-child(2)) {
+  cursor: pointer;
+  font-size: 23px;
+  width: 25px;
+  height: 25px;
+  line-height: 21px;
+  border-radius: 50%;
+  color: #000;
+  box-shadow: 0 3px 14px #d6d6d6;
+  display: inline-flex;
+  justify-content: center;
 }
-.cartCount span:nth-child(2){
-    font-weight: 600;
+.cartCount span:nth-child(2) {
+  font-weight: 600;
 }
 .cartPrice {
-    color: var(--green);
-    font-weight: 600;
-}
-.cartWrap{
-    margin-top: 20px;
-}
-h3{
-    font-size: unset !important ;
-}
-.trashWrapper{
-    cursor: pointer;
+  color: var(--green);
+  font-weight: 600;
 }
 
-@media (min-width:768px) {
-    .cartWrap{
+   .cartLeft h2{
+    margin-top: 20px;
+}
+h3 {
+  font-size: unset !important ;
+}
+.trashWrapper {
+  cursor: pointer;
+}
+.cartImg{
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .cartImg{
+    display: block;
+          width: 70px;
+        height: 70px;
+}
+.cartImg img{
+    aspect-ratio: 1/1;
+}
+  .cartLeft h2{
     margin-top: 50px;
+        margin-bottom: 25px;
+}
+.cartCard{
+    display: flex;
+    gap: 20px;
 }
 }
-@media (min-width:1200px) {
-h3{
-font-size: 20px  !important ;
-}
-  .cartWrap{
+@media (min-width: 1200px) {
+  h3 {
+    font-size: 20px !important ;
+  }
+  .cartLeft {
+    width: 94%;
+            padding-right: 80px;
+  }
+
+   .cartLeft h2{
     margin-top: 90px;
 }
+}
+@media (min-width: 1600px) {
+  .cartLeft {
+    width: 85%;
+  }
+}
+@media (min-width: 1920px) {
+  .cartLeft {
+    width: 76%;
+  }
 }
